--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<div id="log"></div>
+	<div id="log" style="font-family: monospace;"></div>
 	<script src="src/require.js" data-main="build/build"></script>
 	<script src="build/build.js"></script>
 	<script>
